--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@octokit/types": "^11.0.0",
     "@types/lodash": "^4.14.195",
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "^8.43.0",
-    "guizhan-builds-2-data": "^0.1.0",
+    "@types/node": "^20.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "guizhan-builds-2-data": "^0.2.0",
+    "prettier": "3.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
-    "lodash": "^4.17.21"
+    "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
+    "octokit": "^2.1.0"
   }
 }
