--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@actions/core": "^1.10.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
