--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
-    "octokit": "^2.1.0"
+    "maven": "^5.0.0",
+    "octokit": "^2.1.0",
+    "xml-js": "^1.6.11"
   }
 }
