--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -2,8 +2,8 @@ name: Automatic Build
 
 on:
   workflow_dispatch: {}
-  #schedule:
-  #- cron: '*/10 * * * *'
+  schedule:
+  - cron: '*/10 * * * *'
 
 jobs:
   build:
